DELETE and PUT VoiceMessage need fix.
